src/y.output
Terminals unused in grammar

   ETOK


Grammar

    0 $accept: program $end

    1 program: declaration_list '{' decl_statements '}' statement_list '{' code_statements '}'

    2 DIDS: IDENTIFIER '[' NUMBER ']'
    3     | IDENTIFIER
    4     | DIDS ',' IDENTIFIER
    5     | DIDS ',' IDENTIFIER '[' NUMBER ']'

    6 decl_statements: decl_statement
    7                | decl_statements decl_statement

    8 decl_statement: INT DIDS ';'
    9               | ';'

   10 code_statements: code_statement
   11                | code_statements code_statement

   12 code_statement: loops
   13               | ifc
   14               | io ';'
   15               | equals ';'
   16               | IDENTIFIER ':'
   17               | ';'

   18 loops: forloop
   19      | whileloop
   20      | gotoc ';'

   21 io: out
   22   | scan

   23 forloop: FOR IDS '=' NUMBER ',' NUMBER '{' code_statements '}'
   24        | FOR IDS '=' NUMBER ',' NUMBER ',' NUMBER '{' code_statements '}'

   25 whileloop: WHILE boolexpr '{' code_statements '}'

   26 ifc: IF boolexpr '{' code_statements '}' ELSE '{' code_statements '}'
   27    | IF boolexpr '{' code_statements '}'

   28 gotoc: GOTO IDENTIFIER IF boolexpr
   29      | GOTO IDENTIFIER

   30 equals: IDS '=' expr

   31 scan: READ IDS

   32 out: PRINT statement
   33    | PRINTLN statement

   34 statement: prints
   35          | statement ',' prints

   36 prints: STRING
   37       | expr

   38 expr: term
   39     | expr '+' expr
   40     | expr '*' expr
   41     | expr '-' expr
   42     | expr '/' expr

   43 boolexpr: expr GT expr
   44         | expr GTE expr
   45         | expr LT expr
   46         | expr LTE expr
   47         | expr DE expr
   48         | expr NE expr

   49 term: IDS
   50     | NUMBER

   51 IDS: IDENTIFIER
   52    | IDENTIFIER '[' expr ']'


Terminals, with rules where they appear

$end (0) 0
'*' (42) 40
'+' (43) 39
',' (44) 4 5 23 24 35
'-' (45) 41
'/' (47) 42
':' (58) 16
';' (59) 8 9 14 15 17 20
'=' (61) 23 24 30
'[' (91) 2 5 52
']' (93) 2 5 52
'{' (123) 1 23 24 25 26 27
'}' (125) 1 23 24 25 26 27
error (256)
declaration_list (258) 1
statement_list (259) 1
NUMBER (260) 2 5 23 24 50
IDENTIFIER (261) 2 3 4 5 16 28 29 51 52
ETOK (262)
INT (263) 8
FOR (264) 23 24
IF (265) 26 27 28
ELSE (266) 26
GOTO (267) 28 29
WHILE (268) 25
GT (269) 43
GTE (270) 44
LT (271) 45
LTE (272) 46
DE (273) 47
NE (274) 48
STRING (275) 36
PRINT (276) 32
PRINTLN (277) 33
READ (278) 31


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
program (37)
    on left: 1, on right: 0
DIDS (38)
    on left: 2 3 4 5, on right: 4 5 8
decl_statements (39)
    on left: 6 7, on right: 1 7
decl_statement (40)
    on left: 8 9, on right: 6 7
code_statements (41)
    on left: 10 11, on right: 1 11 23 24 25 26 27
code_statement (42)
    on left: 12 13 14 15 16 17, on right: 10 11
loops (43)
    on left: 18 19 20, on right: 12
io (44)
    on left: 21 22, on right: 14
forloop (45)
    on left: 23 24, on right: 18
whileloop (46)
    on left: 25, on right: 19
ifc (47)
    on left: 26 27, on right: 13
gotoc (48)
    on left: 28 29, on right: 20
equals (49)
    on left: 30, on right: 15
scan (50)
    on left: 31, on right: 22
out (51)
    on left: 32 33, on right: 21
statement (52)
    on left: 34 35, on right: 32 33 35
prints (53)
    on left: 36 37, on right: 34 35
expr (54)
    on left: 38 39 40 41 42, on right: 30 37 39 40 41 42 43 44 45 46
    47 48 52
boolexpr (55)
    on left: 43 44 45 46 47 48, on right: 25 26 27 28
term (56)
    on left: 49 50, on right: 38
IDS (57)
    on left: 51 52, on right: 23 24 30 31 49


State 0

    0 $accept: . program $end

    declaration_list  shift, and go to state 1

    program  go to state 2


State 1

    1 program: declaration_list . '{' decl_statements '}' statement_list '{' code_statements '}'

    '{'  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: declaration_list '{' . decl_statements '}' statement_list '{' code_statements '}'

    INT  shift, and go to state 5
    ';'  shift, and go to state 6

    decl_statements  go to state 7
    decl_statement   go to state 8


State 4

    0 $accept: program $end .

    $default  accept


State 5

    8 decl_statement: INT . DIDS ';'

    IDENTIFIER  shift, and go to state 9

    DIDS  go to state 10


State 6

    9 decl_statement: ';' .

    $default  reduce using rule 9 (decl_statement)


State 7

    1 program: declaration_list '{' decl_statements . '}' statement_list '{' code_statements '}'
    7 decl_statements: decl_statements . decl_statement

    INT  shift, and go to state 5
    '}'  shift, and go to state 11
    ';'  shift, and go to state 6

    decl_statement  go to state 12


State 8

    6 decl_statements: decl_statement .

    $default  reduce using rule 6 (decl_statements)


State 9

    2 DIDS: IDENTIFIER . '[' NUMBER ']'
    3     | IDENTIFIER .

    '['  shift, and go to state 13

    $default  reduce using rule 3 (DIDS)


State 10

    4 DIDS: DIDS . ',' IDENTIFIER
    5     | DIDS . ',' IDENTIFIER '[' NUMBER ']'
    8 decl_statement: INT DIDS . ';'

    ','  shift, and go to state 14
    ';'  shift, and go to state 15


State 11

    1 program: declaration_list '{' decl_statements '}' . statement_list '{' code_statements '}'

    statement_list  shift, and go to state 16


State 12

    7 decl_statements: decl_statements decl_statement .

    $default  reduce using rule 7 (decl_statements)


State 13

    2 DIDS: IDENTIFIER '[' . NUMBER ']'

    NUMBER  shift, and go to state 17


State 14

    4 DIDS: DIDS ',' . IDENTIFIER
    5     | DIDS ',' . IDENTIFIER '[' NUMBER ']'

    IDENTIFIER  shift, and go to state 18


State 15

    8 decl_statement: INT DIDS ';' .

    $default  reduce using rule 8 (decl_statement)


State 16

    1 program: declaration_list '{' decl_statements '}' statement_list . '{' code_statements '}'

    '{'  shift, and go to state 19


State 17

    2 DIDS: IDENTIFIER '[' NUMBER . ']'

    ']'  shift, and go to state 20


State 18

    4 DIDS: DIDS ',' IDENTIFIER .
    5     | DIDS ',' IDENTIFIER . '[' NUMBER ']'

    '['  shift, and go to state 21

    $default  reduce using rule 4 (DIDS)


State 19

    1 program: declaration_list '{' decl_statements '}' statement_list '{' . code_statements '}'

    IDENTIFIER  shift, and go to state 22
    FOR         shift, and go to state 23
    IF          shift, and go to state 24
    GOTO        shift, and go to state 25
    WHILE       shift, and go to state 26
    PRINT       shift, and go to state 27
    PRINTLN     shift, and go to state 28
    READ        shift, and go to state 29
    ';'         shift, and go to state 30

    code_statements  go to state 31
    code_statement   go to state 32
    loops            go to state 33
    io               go to state 34
    forloop          go to state 35
    whileloop        go to state 36
    ifc              go to state 37
    gotoc            go to state 38
    equals           go to state 39
    scan             go to state 40
    out              go to state 41
    IDS              go to state 42


State 20

    2 DIDS: IDENTIFIER '[' NUMBER ']' .

    $default  reduce using rule 2 (DIDS)


State 21

    5 DIDS: DIDS ',' IDENTIFIER '[' . NUMBER ']'

    NUMBER  shift, and go to state 43


State 22

   16 code_statement: IDENTIFIER . ':'
   51 IDS: IDENTIFIER .
   52    | IDENTIFIER . '[' expr ']'

    '['  shift, and go to state 44
    ':'  shift, and go to state 45

    $default  reduce using rule 51 (IDS)


State 23

   23 forloop: FOR . IDS '=' NUMBER ',' NUMBER '{' code_statements '}'
   24        | FOR . IDS '=' NUMBER ',' NUMBER ',' NUMBER '{' code_statements '}'

    IDENTIFIER  shift, and go to state 46

    IDS  go to state 47


State 24

   26 ifc: IF . boolexpr '{' code_statements '}' ELSE '{' code_statements '}'
   27    | IF . boolexpr '{' code_statements '}'

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46

    expr      go to state 49
    boolexpr  go to state 50
    term      go to state 51
    IDS       go to state 52


State 25

   28 gotoc: GOTO . IDENTIFIER IF boolexpr
   29      | GOTO . IDENTIFIER

    IDENTIFIER  shift, and go to state 53


State 26

   25 whileloop: WHILE . boolexpr '{' code_statements '}'

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46

    expr      go to state 49
    boolexpr  go to state 54
    term      go to state 51
    IDS       go to state 52


State 27

   32 out: PRINT . statement

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46
    STRING      shift, and go to state 55

    statement  go to state 56
    prints     go to state 57
    expr       go to state 58
    term       go to state 51
    IDS        go to state 52


State 28

   33 out: PRINTLN . statement

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46
    STRING      shift, and go to state 55

    statement  go to state 59
    prints     go to state 57
    expr       go to state 58
    term       go to state 51
    IDS        go to state 52


State 29

   31 scan: READ . IDS

    IDENTIFIER  shift, and go to state 46

    IDS  go to state 60


State 30

   17 code_statement: ';' .

    $default  reduce using rule 17 (code_statement)


State 31

    1 program: declaration_list '{' decl_statements '}' statement_list '{' code_statements . '}'
   11 code_statements: code_statements . code_statement

    IDENTIFIER  shift, and go to state 22
    FOR         shift, and go to state 23
    IF          shift, and go to state 24
    GOTO        shift, and go to state 25
    WHILE       shift, and go to state 26
    PRINT       shift, and go to state 27
    PRINTLN     shift, and go to state 28
    READ        shift, and go to state 29
    '}'         shift, and go to state 61
    ';'         shift, and go to state 30

    code_statement  go to state 62
    loops           go to state 33
    io              go to state 34
    forloop         go to state 35
    whileloop       go to state 36
    ifc             go to state 37
    gotoc           go to state 38
    equals          go to state 39
    scan            go to state 40
    out             go to state 41
    IDS             go to state 42


State 32

   10 code_statements: code_statement .

    $default  reduce using rule 10 (code_statements)


State 33

   12 code_statement: loops .

    $default  reduce using rule 12 (code_statement)


State 34

   14 code_statement: io . ';'

    ';'  shift, and go to state 63


State 35

   18 loops: forloop .

    $default  reduce using rule 18 (loops)


State 36

   19 loops: whileloop .

    $default  reduce using rule 19 (loops)


State 37

   13 code_statement: ifc .

    $default  reduce using rule 13 (code_statement)


State 38

   20 loops: gotoc . ';'

    ';'  shift, and go to state 64


State 39

   15 code_statement: equals . ';'

    ';'  shift, and go to state 65


State 40

   22 io: scan .

    $default  reduce using rule 22 (io)


State 41

   21 io: out .

    $default  reduce using rule 21 (io)


State 42

   30 equals: IDS . '=' expr

    '='  shift, and go to state 66


State 43

    5 DIDS: DIDS ',' IDENTIFIER '[' NUMBER . ']'

    ']'  shift, and go to state 67


State 44

   52 IDS: IDENTIFIER '[' . expr ']'

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46

    expr  go to state 68
    term  go to state 51
    IDS   go to state 52


State 45

   16 code_statement: IDENTIFIER ':' .

    $default  reduce using rule 16 (code_statement)


State 46

   51 IDS: IDENTIFIER .
   52    | IDENTIFIER . '[' expr ']'

    '['  shift, and go to state 44

    $default  reduce using rule 51 (IDS)


State 47

   23 forloop: FOR IDS . '=' NUMBER ',' NUMBER '{' code_statements '}'
   24        | FOR IDS . '=' NUMBER ',' NUMBER ',' NUMBER '{' code_statements '}'

    '='  shift, and go to state 69


State 48

   50 term: NUMBER .

    $default  reduce using rule 50 (term)


State 49

   39 expr: expr . '+' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '/' expr
   43 boolexpr: expr . GT expr
   44         | expr . GTE expr
   45         | expr . LT expr
   46         | expr . LTE expr
   47         | expr . DE expr
   48         | expr . NE expr

    GT   shift, and go to state 70
    GTE  shift, and go to state 71
    LT   shift, and go to state 72
    LTE  shift, and go to state 73
    DE   shift, and go to state 74
    NE   shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79


State 50

   26 ifc: IF boolexpr . '{' code_statements '}' ELSE '{' code_statements '}'
   27    | IF boolexpr . '{' code_statements '}'

    '{'  shift, and go to state 80


State 51

   38 expr: term .

    $default  reduce using rule 38 (expr)


State 52

   49 term: IDS .

    $default  reduce using rule 49 (term)


State 53

   28 gotoc: GOTO IDENTIFIER . IF boolexpr
   29      | GOTO IDENTIFIER .

    IF  shift, and go to state 81

    $default  reduce using rule 29 (gotoc)


State 54

   25 whileloop: WHILE boolexpr . '{' code_statements '}'

    '{'  shift, and go to state 82


State 55

   36 prints: STRING .

    $default  reduce using rule 36 (prints)


State 56

   32 out: PRINT statement .
   35 statement: statement . ',' prints

    ','  shift, and go to state 83

    $default  reduce using rule 32 (out)


State 57

   34 statement: prints .

    $default  reduce using rule 34 (statement)


State 58

   37 prints: expr .
   39 expr: expr . '+' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '/' expr

    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79

    $default  reduce using rule 37 (prints)


State 59

   33 out: PRINTLN statement .
   35 statement: statement . ',' prints

    ','  shift, and go to state 83

    $default  reduce using rule 33 (out)


State 60

   31 scan: READ IDS .

    $default  reduce using rule 31 (scan)


State 61

    1 program: declaration_list '{' decl_statements '}' statement_list '{' code_statements '}' .

    $default  reduce using rule 1 (program)


State 62

   11 code_statements: code_statements code_statement .

    $default  reduce using rule 11 (code_statements)


State 63

   14 code_statement: io ';' .

    $default  reduce using rule 14 (code_statement)


State 64

   20 loops: gotoc ';' .

    $default  reduce using rule 20 (loops)


State 65

   15 code_statement: equals ';' .

    $default  reduce using rule 15 (code_statement)


State 66

   30 equals: IDS '=' . expr

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46

    expr  go to state 84
    term  go to state 51
    IDS   go to state 52


State 67

    5 DIDS: DIDS ',' IDENTIFIER '[' NUMBER ']' .

    $default  reduce using rule 5 (DIDS)


State 68

   39 expr: expr . '+' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '/' expr
   52 IDS: IDENTIFIER '[' expr . ']'

    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    ']'  shift, and go to state 85


State 69

   23 forloop: FOR IDS '=' . NUMBER ',' NUMBER '{' code_statements '}'
   24        | FOR IDS '=' . NUMBER ',' NUMBER ',' NUMBER '{' code_statements '}'

    NUMBER  shift, and go to state 86


State 70

   43 boolexpr: expr GT . expr

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46

    expr  go to state 87
    term  go to state 51
    IDS   go to state 52


State 71

   44 boolexpr: expr GTE . expr

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46

    expr  go to state 88
    term  go to state 51
    IDS   go to state 52


State 72

   45 boolexpr: expr LT . expr

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46

    expr  go to state 89
    term  go to state 51
    IDS   go to state 52


State 73

   46 boolexpr: expr LTE . expr

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46

    expr  go to state 90
    term  go to state 51
    IDS   go to state 52


State 74

   47 boolexpr: expr DE . expr

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46

    expr  go to state 91
    term  go to state 51
    IDS   go to state 52


State 75

   48 boolexpr: expr NE . expr

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46

    expr  go to state 92
    term  go to state 51
    IDS   go to state 52


State 76

   39 expr: expr '+' . expr

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46

    expr  go to state 93
    term  go to state 51
    IDS   go to state 52


State 77

   41 expr: expr '-' . expr

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46

    expr  go to state 94
    term  go to state 51
    IDS   go to state 52


State 78

   40 expr: expr '*' . expr

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46

    expr  go to state 95
    term  go to state 51
    IDS   go to state 52


State 79

   42 expr: expr '/' . expr

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46

    expr  go to state 96
    term  go to state 51
    IDS   go to state 52


State 80

   26 ifc: IF boolexpr '{' . code_statements '}' ELSE '{' code_statements '}'
   27    | IF boolexpr '{' . code_statements '}'

    IDENTIFIER  shift, and go to state 22
    FOR         shift, and go to state 23
    IF          shift, and go to state 24
    GOTO        shift, and go to state 25
    WHILE       shift, and go to state 26
    PRINT       shift, and go to state 27
    PRINTLN     shift, and go to state 28
    READ        shift, and go to state 29
    ';'         shift, and go to state 30

    code_statements  go to state 97
    code_statement   go to state 32
    loops            go to state 33
    io               go to state 34
    forloop          go to state 35
    whileloop        go to state 36
    ifc              go to state 37
    gotoc            go to state 38
    equals           go to state 39
    scan             go to state 40
    out              go to state 41
    IDS              go to state 42


State 81

   28 gotoc: GOTO IDENTIFIER IF . boolexpr

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46

    expr      go to state 49
    boolexpr  go to state 98
    term      go to state 51
    IDS       go to state 52


State 82

   25 whileloop: WHILE boolexpr '{' . code_statements '}'

    IDENTIFIER  shift, and go to state 22
    FOR         shift, and go to state 23
    IF          shift, and go to state 24
    GOTO        shift, and go to state 25
    WHILE       shift, and go to state 26
    PRINT       shift, and go to state 27
    PRINTLN     shift, and go to state 28
    READ        shift, and go to state 29
    ';'         shift, and go to state 30

    code_statements  go to state 99
    code_statement   go to state 32
    loops            go to state 33
    io               go to state 34
    forloop          go to state 35
    whileloop        go to state 36
    ifc              go to state 37
    gotoc            go to state 38
    equals           go to state 39
    scan             go to state 40
    out              go to state 41
    IDS              go to state 42


State 83

   35 statement: statement ',' . prints

    NUMBER      shift, and go to state 48
    IDENTIFIER  shift, and go to state 46
    STRING      shift, and go to state 55

    prints  go to state 100
    expr    go to state 58
    term    go to state 51
    IDS     go to state 52


State 84

   30 equals: IDS '=' expr .
   39 expr: expr . '+' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '/' expr

    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79

    $default  reduce using rule 30 (equals)


State 85

   52 IDS: IDENTIFIER '[' expr ']' .

    $default  reduce using rule 52 (IDS)


State 86

   23 forloop: FOR IDS '=' NUMBER . ',' NUMBER '{' code_statements '}'
   24        | FOR IDS '=' NUMBER . ',' NUMBER ',' NUMBER '{' code_statements '}'

    ','  shift, and go to state 101


State 87

   39 expr: expr . '+' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '/' expr
   43 boolexpr: expr GT expr .

    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79

    $default  reduce using rule 43 (boolexpr)


State 88

   39 expr: expr . '+' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '/' expr
   44 boolexpr: expr GTE expr .

    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79

    $default  reduce using rule 44 (boolexpr)


State 89

   39 expr: expr . '+' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '/' expr
   45 boolexpr: expr LT expr .

    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79

    $default  reduce using rule 45 (boolexpr)


State 90

   39 expr: expr . '+' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '/' expr
   46 boolexpr: expr LTE expr .

    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79

    $default  reduce using rule 46 (boolexpr)


State 91

   39 expr: expr . '+' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '/' expr
   47 boolexpr: expr DE expr .

    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79

    $default  reduce using rule 47 (boolexpr)


State 92

   39 expr: expr . '+' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '/' expr
   48 boolexpr: expr NE expr .

    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79

    $default  reduce using rule 48 (boolexpr)


State 93

   39 expr: expr . '+' expr
   39     | expr '+' expr .
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '/' expr

    '*'  shift, and go to state 78
    '/'  shift, and go to state 79

    $default  reduce using rule 39 (expr)


State 94

   39 expr: expr . '+' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   41     | expr '-' expr .
   42     | expr . '/' expr

    '*'  shift, and go to state 78
    '/'  shift, and go to state 79

    $default  reduce using rule 41 (expr)


State 95

   39 expr: expr . '+' expr
   40     | expr . '*' expr
   40     | expr '*' expr .
   41     | expr . '-' expr
   42     | expr . '/' expr

    $default  reduce using rule 40 (expr)


State 96

   39 expr: expr . '+' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '/' expr
   42     | expr '/' expr .

    $default  reduce using rule 42 (expr)


State 97

   11 code_statements: code_statements . code_statement
   26 ifc: IF boolexpr '{' code_statements . '}' ELSE '{' code_statements '}'
   27    | IF boolexpr '{' code_statements . '}'

    IDENTIFIER  shift, and go to state 22
    FOR         shift, and go to state 23
    IF          shift, and go to state 24
    GOTO        shift, and go to state 25
    WHILE       shift, and go to state 26
    PRINT       shift, and go to state 27
    PRINTLN     shift, and go to state 28
    READ        shift, and go to state 29
    '}'         shift, and go to state 102
    ';'         shift, and go to state 30

    code_statement  go to state 62
    loops           go to state 33
    io              go to state 34
    forloop         go to state 35
    whileloop       go to state 36
    ifc             go to state 37
    gotoc           go to state 38
    equals          go to state 39
    scan            go to state 40
    out             go to state 41
    IDS             go to state 42


State 98

   28 gotoc: GOTO IDENTIFIER IF boolexpr .

    $default  reduce using rule 28 (gotoc)


State 99

   11 code_statements: code_statements . code_statement
   25 whileloop: WHILE boolexpr '{' code_statements . '}'

    IDENTIFIER  shift, and go to state 22
    FOR         shift, and go to state 23
    IF          shift, and go to state 24
    GOTO        shift, and go to state 25
    WHILE       shift, and go to state 26
    PRINT       shift, and go to state 27
    PRINTLN     shift, and go to state 28
    READ        shift, and go to state 29
    '}'         shift, and go to state 103
    ';'         shift, and go to state 30

    code_statement  go to state 62
    loops           go to state 33
    io              go to state 34
    forloop         go to state 35
    whileloop       go to state 36
    ifc             go to state 37
    gotoc           go to state 38
    equals          go to state 39
    scan            go to state 40
    out             go to state 41
    IDS             go to state 42


State 100

   35 statement: statement ',' prints .

    $default  reduce using rule 35 (statement)


State 101

   23 forloop: FOR IDS '=' NUMBER ',' . NUMBER '{' code_statements '}'
   24        | FOR IDS '=' NUMBER ',' . NUMBER ',' NUMBER '{' code_statements '}'

    NUMBER  shift, and go to state 104


State 102

   26 ifc: IF boolexpr '{' code_statements '}' . ELSE '{' code_statements '}'
   27    | IF boolexpr '{' code_statements '}' .

    ELSE  shift, and go to state 105

    $default  reduce using rule 27 (ifc)


State 103

   25 whileloop: WHILE boolexpr '{' code_statements '}' .

    $default  reduce using rule 25 (whileloop)


State 104

   23 forloop: FOR IDS '=' NUMBER ',' NUMBER . '{' code_statements '}'
   24        | FOR IDS '=' NUMBER ',' NUMBER . ',' NUMBER '{' code_statements '}'

    '{'  shift, and go to state 106
    ','  shift, and go to state 107


State 105

   26 ifc: IF boolexpr '{' code_statements '}' ELSE . '{' code_statements '}'

    '{'  shift, and go to state 108


State 106

   23 forloop: FOR IDS '=' NUMBER ',' NUMBER '{' . code_statements '}'

    IDENTIFIER  shift, and go to state 22
    FOR         shift, and go to state 23
    IF          shift, and go to state 24
    GOTO        shift, and go to state 25
    WHILE       shift, and go to state 26
    PRINT       shift, and go to state 27
    PRINTLN     shift, and go to state 28
    READ        shift, and go to state 29
    ';'         shift, and go to state 30

    code_statements  go to state 109
    code_statement   go to state 32
    loops            go to state 33
    io               go to state 34
    forloop          go to state 35
    whileloop        go to state 36
    ifc              go to state 37
    gotoc            go to state 38
    equals           go to state 39
    scan             go to state 40
    out              go to state 41
    IDS              go to state 42


State 107

   24 forloop: FOR IDS '=' NUMBER ',' NUMBER ',' . NUMBER '{' code_statements '}'

    NUMBER  shift, and go to state 110


State 108

   26 ifc: IF boolexpr '{' code_statements '}' ELSE '{' . code_statements '}'

    IDENTIFIER  shift, and go to state 22
    FOR         shift, and go to state 23
    IF          shift, and go to state 24
    GOTO        shift, and go to state 25
    WHILE       shift, and go to state 26
    PRINT       shift, and go to state 27
    PRINTLN     shift, and go to state 28
    READ        shift, and go to state 29
    ';'         shift, and go to state 30
